fixed dropdown from being cutoff in the two columns image component

--- a/app/components/modules/TwoColumnsImageAndText/_twoColumnsImageAndText.scss
+++ b/app/components/modules/TwoColumnsImageAndText/_twoColumnsImageAndText.scss
@@ -151,5 +151,5 @@
 }
 
 .module.Page_Modules_Modules_TwoColumnsImageAndText {
-    overflow-x: hidden;
+    //overflow-x: hidden;
 }
